# T2-Snowboarding

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/: snowboard_terrain.mtl  terrain.mtl
assets/Models/: scnd_snow_terrain.mtl
assets/Sounds/: credits.txt
assets/Sounds/SFX/: credits.txt
include/: accelerator.h  camera.h  mesh_navigator.h  obstacle.h  player.h
src/: CMakeLists.txt  accelerator.cpp  camera.cpp  mesh_navigator.cpp  obstacle.cpp  player.cpp
